# lemon

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  version-gen
check/: Makefile.am  Makefile.in  canonical.c  humanForm.c  lemon_benchmark.c  lemon_contents.c  parallel.c  parallel_non_blocking.c  xlf.c  xlf_non_blocking.c
cmake/: EtmcLemonConfig.cmake.in  config.h.in  etmc_lemon.pc.in  lemon.pc.in  lemonConfig.cmake.in
cmake/New Folder/: config.h.in
include/: Makefile.am  Makefile.in  config.h.in  lemon.h  lemon_binheader.h  lemon_defines.h  lemon_header.h  lemon_reader.h  lemon_writer.h
src/: Makefile.am  Makefile.in  header_construct.c  header_destroy.c  internal_LemonSetup.ih  internal_bigEndian.static  internal_bigEndianLong.static  internal_bigEndianLongLong.static  internal_bigEndianShort.static  internal_byteSwap.static  internal_chainDecomposeEtype.static  internal_clearReaderState.static  internal_clearWriterState.static  internal_detectOverflow.static  internal_endOfFile.static  internal_freeIOTypes.static  internal_freeTypeChain.static  internal_padding.static  internal_readAndParseHeader.static  internal_setupIOTypes.static  internal_setupTypeChain.static  internal_skipBinaryHeader.static  internal_split.static  internal_splitSize.static  internal_writeRecordBinaryHeader.static  lemon_versionString.c  reader_EOM.c  reader_MBFlag.c  reader_MEFlag.c  reader_bytes.c  reader_closeRecord.c  reader_construct.c  reader_destroy.c  reader_finishReading.c  reader_getPointer.c  reader_latticeParallel.c  reader_latticeParallelMapped.c  reader_latticeParallelNonBlocking.c  reader_latticeParallelNonBlockingMapped.c  reader_nextRecord.c  (+20 more)
test/: Makefile.am  Makefile.in  lemon_benchmark.c  lemon_contents.c  parallel.c  parallel_non_blocking.c  xlf_non_blocking.c
